--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,10 +13,10 @@
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a routerLink="/register" class="nav-link">Dodano 1</a>
+          <a routerLink="/dod1" class="nav-link">Dodano 1</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/login" class="nav-link">Dodano 2</a>
+          <a routerLink="/dod2" class="nav-link">Dodano 2</a>
         </li>
       </ul>
 
