--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,1 +1,41 @@
-<p>clients works!</p>
+<div class="row">
+  <div class="col-md-6">
+    <h2><i class="fa fa-users"></i> Clients</h2>
+  </div>
+  <div class="col-md-6">
+    <h5 class="text-right text-secondary">Total Owed: {{ totalOwed | currency:"USD":"symbol" }}</h5>
+  </div>
+</div>
+
+
+<!-- ako nema noClents, usnimava template.. -->
+<table *ngIf="clients?.length > 0;else noClients" class="table table-striped">
+  <!-- header -->
+  <thead class="thead-inverse">
+    <tr>
+      <th style="width: 30%">Name</th>
+      <th style="width: 30%">Email</th>
+      <th style="width: 20%">Balance</th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <!-- podaci u tabli -->
+  <tbody>
+    <tr *ngFor="let client of clients">
+      <td>{{ client.firstName }} {{ client.lastName }}</td>
+      <td>{{ client.email }}</td>
+      <td>{{ client.balance | currency:"EUR":"symbol" }}</td>
+      <td><a routerLink="client/{{ client.id }}" class="btn btn-secondary btn-sm"><i
+            class="fa fa-arrow-circle-o-right"></i> Details</a></td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+<!-- ako nema podataka prikazuje ovu poruku -->
+<ng-template #noClients>
+  <hr>
+  <h5>There are no clients in the system</h5>
+</ng-template>
