--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -37,5 +37,5 @@
 <!-- ako nema podataka prikazuje ovu poruku -->
 <ng-template #noClients>
   <hr>
-  <h5>There are no clients in the system</h5>
+  <h5>There are  <span class="text-danger">no clients</span>  in the system</h5>
 </ng-template>
