--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,10 +21,19 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a href="" class="nav-link">{{ loggedInUser}}</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a routerLink="/settings" class="nav-link">Setings</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a href="" (click)="onLogout()" class="nav-link">Logout</a>
+        </li>
+        <li *ngIf="!isLoggedIn" class="nav-item">
           <a routerLink="/register" class="nav-link">Register</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!isLoggedIn" class="nav-item">
           <a routerLink="/login" class="nav-link">Login</a>
         </li>
       </ul>
