--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,10 +30,10 @@
         <li *ngIf="isLoggedIn" class="nav-item">
           <a href="" (click)="onLogout()" class="nav-link">Logout</a>
         </li>
-        <li *ngIf="!isLoggedIn" class="nav-item">
+        <li *ngIf="!isLoggedIn && showRegister"  class="nav-item">
           <a routerLink="/register" class="nav-link">Register</a>
         </li>
-        <li *ngIf="!isLoggedIn" class="nav-item">
+        <li *ngIf="!isLoggedIn && showRegister" class="nav-item">
           <a routerLink="/login" class="nav-link">Login</a>
         </li>
       </ul>
