--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,16 +11,11 @@
         </li>
       </ul>
 
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a routerLink="/dod1" class="nav-link">Dodano 1</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/dod2" class="nav-link">Dodano 2</a>
-        </li>
-      </ul>
 
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a routerLink="/logger" class="nav-link">Logger</a>
+        </li>
         <li *ngIf="isLoggedIn" class="nav-item">
           <a href="" class="nav-link">{{ loggedInUser}}</a>
         </li>
