015 dodan template driven form

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,9 @@
         <li class="nav-item">
           <a routerLink="/logger" class="nav-link">Logger</a>
         </li>
+        <li class="nav-item">
+          <a routerLink="/formTD" class="nav-link">Form TD</a>
+        </li>
         <li *ngIf="isLoggedIn" class="nav-item">
           <a href="" class="nav-link">{{ loggedInUser}}</a>
         </li>
