--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -16,15 +16,14 @@
   </div>
   <div class="card-body">
     <form (submit)="onSubmit()">
+
       <div class="form-group">
         <label>Allow Registration</label>
         <input
+        class="ml-3"
         type="checkbox"
         name="allowRegistration"
         [checked]="settings.allowRegistration"
-
-
-
         (change)="settings.allowRegistration = !settings.allowRegistration"
         >
       </div>
@@ -32,6 +31,7 @@
       <div class="form-group">
         <label>Disable Balance On Add</label>
         <input
+        class="ml-3"
         type="checkbox"
         name="disableBalanceOnAdd"
         [checked]="settings.disableBalanceOnAdd"
@@ -42,10 +42,22 @@
       <div class="form-group">
         <label>Disable Balance On Edit</label>
         <input
+        class="ml-3"
         type="checkbox"
         name="disableBalanceOnEdit"
         [checked]="settings.disableBalanceOnEdit"
         (change)="settings.disableBalanceOnEdit = !settings.disableBalanceOnEdit"
+        >
+      </div>
+
+      <div class="form-group">
+        <label>Disable Vježbe</label>
+        <input
+        class="ml-3"
+        type="checkbox"
+        name="ukljuciVjezbe"
+        [checked]="settings.ukljuciVjezbe"
+        (change)="settings.ukljuciVjezbe = !settings.ukljuciVjezbe"
         >
       </div>
 
