--- a/src/app/formtd/template-driven-form/template-driven-form.component.html
+++ b/src/app/formtd/template-driven-form/template-driven-form.component.html
@@ -1,5 +1,8 @@
-<button (click)="showForm = !showForm"
-class="btn btn-dark mb-3">Add New User</button>
+<button
+(click)="showForm = !showForm"
+class="btn btn-block mb-3"
+[ngClass]="currentClass"
+>Add New User</button>
 <div>
 
   <button (click)="user.hide = !user.hide" class="btn btn-dark btn-bg mb-3">
@@ -80,11 +83,16 @@ class="btn btn-dark mb-3">Add New User</button>
 
 <!-- VAZNO users?.length prvjerava dali postoji -->
 <ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
-  <li class="card card-body mb-2" *ngFor="let user of users;  let ind=index;" [class.bg-light]="user.isActive">
+  <li class="card card-body mb-2" *ngFor="let user of users;  let ind=index;"
+  [class.bg-light]="user.isActive"
+
+  (click)="user.isActive = !user.isActive"
+  >
 
     <div class="row">
       <div class="col-sm-4">
-        <h3>{{ user.firstName }} {{ user.lastName }}
+        <!-- {{user.lastName}} === [textContent]="user.lastName"   ISTO !!!!-->
+        <h3 [ngStyle]="currentStyle">{{ user.firstName | uppercase}} <span [textContent]="user.lastName | lowercase"></span>
           <small>
             <button (click)="user.hide = !user.hide" class="btn btn-dark btn-sm">
               <i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'"></i>
@@ -93,7 +101,12 @@ class="btn btn-dark mb-3">Add New User</button>
         </h3>
       </div>
       <div class="col-sm-8">
-        <img  class="img-fluid" [src]="user.img" alt="">
+        <!-- Prvi nacin -->
+        <img *ngIf="user.img" class="img-fluid" [src]="user.img" alt="">
+        <!-- Drugi nacin -->
+        <!-- <img *ngIf="user.img" class="img-fluid" src={{user.img}} alt=""> -->
+        <!-- treci nacin -->
+        <!-- <img *ngIf="user.img" class="img-fluid" bind-src="user.img" alt=""> -->
       </div>
     </div>
 
