--- a/src/app/formtd/template-driven-form/template-driven-form.component.html
+++ b/src/app/formtd/template-driven-form/template-driven-form.component.html
@@ -1,13 +1,13 @@
-<button
-(click)="showForm = !showForm"
-class="btn btn-block mb-3"
-[ngClass]="currentClass"
->Add New User</button>
+<div class="container">
+  <button (click)="showForm = !showForm" class="btn mr-3 col-sm-4 mb-3" [ngClass]="currentClass">Add New User</button>
+  <button (click)="slusaj($event, user)" class="btn ml-3 col-sm-4 mb-3" [ngClass]="currentClass">Slusaj..</button>
+</div>
+
 <div>
 
   <button (click)="user.hide = !user.hide" class="btn btn-dark btn-bg mb-3">
     <i class="fas fa-address-card"></i> User: {{user.firstName}}
-    <i class="fas fa-angle-double-left"></i>
+    <i class="fas fa-angle-double-left"></i> {{user.lastName}}
   </button>
 
 </div>
@@ -16,83 +16,58 @@ class="btn btn-block mb-3"
   <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
     <div class="form-group">
       <label>First Name</label>
-      <input
-        type="text"
-        [(ngModel)]="user.firstName"
-        [ngClass]="{'is-invalid':userFirstName.errors && userFirstName.touched}"
-        class="form-control"
-        name="firstName"
-        #userFirstName="ngModel"
-        required
-        minlength="2"
-      >
+      <input (keydown)="fireEvent($event)" type="text" [(ngModel)]="user.firstName"
+        [ngClass]="{'is-invalid':userFirstName.errors && userFirstName.touched}" class="form-control" name="firstName"
+        #userFirstName="ngModel" required minlength="2">
       <div [hidden]="!userFirstName.errors?.required" class="invalid-feedback">
         First name required
       </div>
-
       <div [hidden]="!userFirstName.errors?.minlength" class="invalid-feedback">
-          Must be at least 2 characters
+        Must be at least 2 characters
       </div>
     </div>
+
     <div class="form-group">
       <label>Last Name</label>
-      <input
-        type="text"
-        [(ngModel)]="user.lastName"
-        [ngClass]="{'is-invalid':userLastName.errors && userLastName.touched}"
-        class="form-control"
-        name="lastName"
-        #userLastName="ngModel"
-        required
-        minlength="2"
-      >
+      <input type="text" [(ngModel)]="user.lastName"
+        [ngClass]="{'is-invalid':userLastName.errors && userLastName.touched}" class="form-control" name="lastName"
+        #userLastName="ngModel" required minlength="2">
       <div [hidden]="!userLastName.errors?.required" class="invalid-feedback">
         Last name required
       </div>
 
       <div [hidden]="!userLastName.errors?.minlength" class="invalid-feedback">
-          Must be at least 2 characters
+        Must be at least 2 characters
       </div>
     </div>
+
     <div class="form-group">
       <label>Email</label>
-      <input
-      type="email"
-      [(ngModel)]="user.email"
-      [ngClass]="{'is-invalid':userEmail.errors && userEmail.touched}"
-      class="form-control"
-      name="email"
-      #userEmail="ngModel"
-      required
-      pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"
-    >
-    <div [hidden]="!userEmail.errors?.required" class="invalid-feedback">
-      Email name required
-    </div>
-
-    <div [hidden]="!userEmail.errors?.pattern" class="invalid-feedback">
+      <input type="email" [(ngModel)]="user.email" [ngClass]="{'is-invalid':userEmail.errors && userEmail.touched}"
+        class="form-control" name="email" #userEmail="ngModel" required
+        pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?">
+      <div [hidden]="!userEmail.errors?.required" class="invalid-feedback">
+        Email name required
+      </div>
+      <div [hidden]="!userEmail.errors?.pattern" class="invalid-feedback">
         Email is not valid
-    </div>
+      </div>
     </div>
 
-    <button
-    [disabled]="!userForm.form.valid"
-    class="btn btn-block btn-secondary mb-3">Add New User</button>
+    <button [disabled]="!userForm.form.valid" class="btn btn-block btn-secondary mb-3">Add New User</button>
   </form>
 </div>
 
 <!-- VAZNO users?.length prvjerava dali postoji -->
 <ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
-  <li class="card card-body mb-2" *ngFor="let user of users;  let ind=index;"
-  [class.bg-light]="user.isActive"
-
-  (click)="user.isActive = !user.isActive"
-  >
+  <li class="card card-body mb-2" *ngFor="let user of users;  let ind=index;" [class.bg-light]="user.isActive"
+    (click)="user.isActive = !user.isActive">
 
     <div class="row">
       <div class="col-sm-4">
         <!-- {{user.lastName}} === [textContent]="user.lastName"   ISTO !!!!-->
-        <h3 [ngStyle]="currentStyle">{{ user.firstName | uppercase}} <span [textContent]="user.lastName | lowercase"></span>
+        <h3 [ngStyle]="currentStyle">{{ user.firstName | uppercase}} <span
+            [textContent]="user.lastName | lowercase"></span>
           <small>
             <button (click)="user.hide = !user.hide" class="btn btn-dark btn-sm">
               <i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'"></i>
@@ -110,16 +85,16 @@ class="btn btn-block mb-3"
       </div>
     </div>
 
-
     <ul class="list-group" *ngIf="!user.hide">
       <li class="list-group-item">Emial: {{ user.email }}</li>
-      <li class="list-group-item">Joined: {{ user.registered | date }}</li>
+      <li class="list-group-item">Joined: {{ user.registered | date:"mm/dd/yyyy" }}</li>
+      <li class="list-group-item">Joined: {{ user.registered | date:"longDate" }}</li>
+      <li class="list-group-item">Racun: {{ user?.balans | currency:"EUR" }}</li>
+      <li class="list-group-item">Racun Number: {{ user?.balans | number:"6.4" }}</li>
+      <li class="list-group-item">Percent: {{ 1 | percent }}</li>
     </ul>
     <div>
-      <button (click)="deleteUser(ind)"
-      class="btn btn-dark"
-      [class.bg-danger]="!user.hide"
-      >Delete User</button>
+      <button (click)="deleteUser(ind)" class="btn btn-dark" [class.bg-danger]="!user.hide">Delete User</button>
     </div>
   </li>
 </ul>
