022 set up emitter menu

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,6 +19,9 @@
         <li *ngIf="showVjezbe && isLoggedIn" class="nav-item">
           <a routerLink="/formTD" class="nav-link">FormTD</a>
         </li>
+        <li *ngIf="showVjezbe && isLoggedIn" class="nav-item">
+          <a routerLink="/emitter" class="nav-link">Emitter</a>
+        </li>
         <li *ngIf="isLoggedIn" class="nav-item">
           <a href="" class="nav-link">{{ loggedInUser}}</a>
         </li>
