--- a/src/app/components/client-detail/client-detail.component.html
+++ b/src/app/components/client-detail/client-detail.component.html
@@ -14,8 +14,6 @@
       <button (click)="onDeleteClick()" class="btn btn-danger">Delete</button>
     </div>
   </div>
-
-
 </div>
 
 <hr>
@@ -30,7 +28,6 @@
       <div class="cold-md-8 col-sm-6">
         <h3 class="pull-right">
           Balance
-          Balance
           <span [class.text-danger]="!hasBalance" [class.text-success]="hasBalance">
             {{ client.balance | currency:"USD":"symbol" }}
           </span>
@@ -39,9 +36,6 @@
             <a (click)="showBalanceUpdateInput = !showBalanceUpdateInput">
               <i class="fa fa-pencil"></i>
             </a>
-            <!-- <button (click)="promjeni()">
-            <i class="fa fa-pencil"></i>
-          </button> -->
           </small>
         </h3>
 
@@ -49,7 +43,7 @@
           <!-- opcija bez programiranja !! -->
           <form *ngIf="showBalanceUpdateInput" (submit)="updateBalance()">
             <div class="input-group">
-              <input type="text" name="balance" class="form-control" [(ngModel)]="client.balance">
+              <input type="number" name="balance" class="form-control" [(ngModel)]="client.balance">
               <span class="input-group-btn">
                 <button type="submit" class="btn ptn-primary">Update</button>
               </span>
