--- a/src/app/emitt/post-form/post-form.component.html
+++ b/src/app/emitt/post-form/post-form.component.html
@@ -3,13 +3,15 @@
   <form>
     <div class="form-group">
       <label>Title</label>
-      <input type="text" class="form-control" name="title" #title>
+      <input type="text" class="form-control" name="title" [(ngModel)]="currentPost.title" #title>
     </div>
     <div class="form-group">
       <label>Body</label>
-      <input type="text" class="form-control" name="body" #body>
+      <input type="text" class="form-control" name="body" [(ngModel)]="currentPost.body" #body>
     </div>
-    <button (click)="addPost(title.value, body.value)" class="btn btn-dark btn-block">Add Post</button>
+    <input  type="hidden" name="id" [(ngModel)]="currentPost.id">
+    <button *ngIf="!isEdit" (click)="addPost(title.value, body.value)" class="btn btn-dark btn-block">Add Post</button>
+    <button *ngIf="isEdit" (click)="updatePost()" class="btn btn-warning btn-block">Update Post</button>
   </form>
 </div>
 
